# xmonadrc

./: .editorconfig  .gitignore  .gitmodules  LICENSE  Makefile  README.md  make.pl  xmobar-cmd.sh  xmobar.hs  xmonad.hs
project/: stack.yaml  xmonadrc.cabal
project/src/: FocusHook.hs  Keys.hs  Main.hs  Utils.hs  Workspaces.hs
project/src/Utils/: CustomConfig.hs  FocusHook.hs
project/src/XMonad/Hooks/: ManageHelpers.hs  SetWMName.hs
session/: xmonad-unclechu-session.sh  xmonad-unclechu.desktop  xmonadrc-unclechu-session.sh
xmobar/: gen-with-replacements.pl  gen-with-replacements.sh  xmobar-cmd.sh  xmobar.hs  xmobar.replacements.hs.example
xmobar/indicators-cmd/: package.yaml  stack.yaml  unclechu-xmobar-indicators-cmd.cabal
xmobar/indicators-cmd/app/: Main.hs  Main.hsc
xmobar/indicators-cmd/src/freebsd/: ParentProc.hs
xmobar/indicators-cmd/src/freebsd/Test/: Utils.hs
xmobar/indicators-cmd/src/linux/: ParentProc.hsc
xmobar/indicators-cmd/src/linux/Test/: Utils.hs
xmobar/indicators-cmd/test/: Spec.hs
xmonad/: package.yaml  stack.yaml  unclechu-xmonadrc.cabal
xmonad/app/: Main.hs
xmonad/src/: Config.hs  FocusHook.hs  Keys.hs  Main.hs  Utils.hs  Workspaces.hs
xmonad/src/Utils/: CustomConfig.hs  IPC.hs
xmonad/src/XMonad/Hooks/: EwmhDesktops.hs  Focus.hs
