name:                xmonadrc
version:             0.0.0.0
synopsis:            xmonadrc
description:         xmonadrc
license:             GPL-3
license-file:        LICENSE
author:              Viacheslav Lotsmanov
maintainer:          lotsmanov89@gmail.com
copyright:           2016 Viacheslav Lotsmanov
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonadrc-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils
                     , Utils.CustomConfig
                     , Keys
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory ==1.2.6.2
                     , X11 ==1.6.1.2
                     , X11-xft ==0.3.1
                     , xmonad-contrib ==0.12
                     , xmonad ==0.12
  default-language:    Haskell2010
