name:                xmonadrc
version:             0.0.0.0
synopsis:            xmonadrc
description:         xmonadrc
license:             GPL-3
license-file:        LICENSE
author:              Viacheslav Lotsmanov
maintainer:          lotsmanov89@gmail.com
copyright:           2016 Viacheslav Lotsmanov
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonadrc-unclechu
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils
                     , Utils.CustomConfig
                     , Keys
                     , FocusHook
                     , Workspaces

                     -- Overwritten modules by 'xmonad-contrib' git-submodule
                     , XMonad.Hooks.Focus
                     , XMonad.Hooks.EwmhDesktops
                     , XMonad.Hooks.ManageHelpers
                     , XMonad.Hooks.SetWMName


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , directory
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , data-default

                     -- required by 'xmonad-contrib' git-submodule
                     , mtl
                     , unix
                     , utf8-string

  default-language:    Haskell2010
  ghc-options:         -threaded
