name:                unclechu-xmonadrc
version:             0.0.0.0
synopsis:            unclechu's xmonad config
description:         unclechu's own xmonad config with custom way
                     of rebuilding xmonad application, own session files
                     and also xmobar config.
license:             GPL-3
license-file:        LICENSE
author:              Viacheslav Lotsmanov
maintainer:          lotsmanov89@gmail.com
copyright:           2016-2017 Viacheslav Lotsmanov
category:            System
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src

  exposed-modules:     Utils
                     , Utils.IPC
                     , Utils.CustomConfig
                     , Keys
                     , Config
                     , FocusHook
                     , Workspaces

                     -- Overwritten modules by 'xmonad-contrib' git-submodule
                     , XMonad.Hooks.Focus
                     , XMonad.Hooks.EwmhDesktops
                     , XMonad.Hooks.ManageHelpers
                     , XMonad.Hooks.SetWMName

  build-depends:       base
                     , directory
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , data-default
                     , dbus
                     , unix

                     -- required by 'xmonad-contrib' git-submodule
                     , mtl
                     , utf8-string

  ghc-options:         -Wall -O2
  default-language:    Haskell2010


executable xmonad-unclechu
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base
                     , unclechu-xmonadrc

                     , xmonad
                     , xmonad-contrib
                     , directory
                     , data-default

  ghc-options:         -threaded -Wall -O2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/unclechu/xmonadrc
