name:                unclechu-xmobar-indicators-cmd
version:             0.0.0.0
synopsis:            unclechu's indicators implementation for xmobar
description:         unclechu's application that listen for events
                     and writes xmobar indicators line to stdout.
homepage:            https://github.com/unclechu/xmonadrc/tree/master/xmobar/indicators-cmd
license:             GPL-3
license-file:        LICENSE
author:              Viacheslav Lotsmanov
maintainer:          lotsmanov89@gmail.com
copyright:           2017 Viacheslav Lotsmanov
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable unclechu-xmobar-indicators-cmd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2

  build-depends:       base
                     , dbus
                     , unix
                     , data-default
                     , X11

  default-language:    Haskell2010

test-suite unclechu-xmobar-indicators-cmd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base

  ghc-options:         -Wall -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/unclechu/xmonadrc
