name:                unclechu-xmobar-indicators-cmd
version:             0.0.0.0
synopsis:            unclechu's indicators implementation for xmobar
description:         unclechu's application that listen for events
                     and writes xmobar indicators line to stdout.
homepage:            https://github.com/unclechu/xmonadrc/tree/master/xmobar/indicators-cmd
license:             GPL-3
license-file:        LICENSE
author:              Viacheslav Lotsmanov
maintainer:          lotsmanov89@gmail.com
copyright:           2017 Viacheslav Lotsmanov
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  if os(linux)
    hs-source-dirs:    src/linux
  if os(freebsd)
    hs-source-dirs:    src/freebsd

  ghc-options:         -Wall -O2
  build-tools:         hsc2hs
  default-language:    Haskell2010
  exposed-modules:     ParentProc
  build-depends:       base

executable unclechu-xmobar-indicators-cmd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base
                     , dbus
                     , unix
                     , data-default
                     , X11
                     , unclechu-xmobar-indicators-cmd

test-suite unclechu-xmobar-indicators-cmd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base
                     , HUnit
                     , dbus
                     , process
                     , unix
                     , directory
                     , X11

source-repository head
  type:     git
  location: https://github.com/unclechu/xmonadrc
